--- a/base.css
+++ b/base.css
@@ -1,7 +1,10 @@
+
 html,
 body {
+  margin: 0;
+  padding: 0;
   background-color: #ffeead;
-  margin: 10px;
+  /* margin: 10px; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
@@ -11,8 +14,8 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 2em;
-  color: #ffeead;
 }
+
 
 .container > div:nth-child(1n) {
   background-color: #06d6a0;
