--- a/layout02.css
+++ b/layout02.css
@@ -4,10 +4,9 @@
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 80px auto 100px;
     grid-template-areas:
-        "h h h h h h h h h h h h"
-        "m m c c c c c c c c c c"
-        "f f f f f f f f f f f f "
-    ;
+        "h h h h    h h h h     h h h h"
+        "m m c c    c c c c     c c c c"
+        "f f f f    f f f f     f f f f "  ;
 }
 
 .header {
