--- a/layout01.css
+++ b/layout01.css
@@ -9,27 +9,34 @@
     /* grid-template-columns: 500px 500px; */
     /* grid-template-columns: repeat(5, 200px); */
     /* grid-template-rows: repeat(2, 200px); */
-    /* grid-gap: 10px; */
+    /* gap: 10px; */
+    grid-gap: 10px;
 }
 
 .header {
-    grid-column: 2 / -1;
+    /* grid-column: 2 / -1; */
     /* grid-column: 1 / span 12; */
     /* grid-column: 1 / 4; */
-    /* grid-column-start: 1; */
-    /* grid-column-end: -1; */
+    grid-column-start: 1;
+    grid-column-end: -1;
 }
 .menu {
-    grid-column: 1 / 2;
-    grid-row: 1 / 3 ;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    /* grid-row-start: 1; */
+    /* grid-row-end: -1; */
+    /* grid-column: 1 / 2; */
+    /* grid-row: 1 / 3 ; */
 
 }
 .content {
-    grid-column: 2 / -1;
+    grid-column-start: 3;
+    grid-column-end: -1;
+    /* grid-column: 2 / -1; */
 
 }
 .footer {
-    grid-column: 1 / -1;
-    /* grid-column-start: 1; */
-    /* grid-column-end: -1; */
+    grid-column-start: 1;
+    grid-column-end: -1;
+    /* grid-column: 1 / -1; */
 }
