--- a/layout03.css
+++ b/layout03.css
@@ -1,5 +1,10 @@
+.section-container {
+    width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .container {
-    height: 80%;
+    height: 80vh;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     /* grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); */
